# openshift-aiops-toolkit

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  openshift-aiops  pyproject.toml
.codex/: config.toml.example
config/: allowed-commands.yaml  collectors.yaml  defaults.yaml  sanitization.yaml  severity.yaml
docs/: 01-visao-geral.md  02-arquitetura.md  03-instalacao.md  04-configuracao.md  05-operacao.md  06-processo-diagnostico.md  07-mcp.md  08-seguranca.md  09-troubleshooting-openshift.md  10-troubleshooting-toolkit.md  11-prompts.md  12-multiplos-clusters.md  13-operacao-producao.md  14-must-gather.md  15-runbooks.md  16-integracoes.md  17-governanca.md  18-exemplos.md  GUIA-PASSO-A-PASSO.md  PROCESSO-OPERACIONAL.md  auditoria-estatica.md  backlog-tecnico.md  comparacao-mcp-redhat.md  contexto-atual.md  integracao-codex.md  matriz-compatibilidade.md  matriz-mcp-scripts-must-gather.md  matriz-testes.md  migracao-contexto-automatico.md  validacao-ambiente-local.md  validacao-crc.md  validacao-mcp.md  validacao-must-gather-crc-20260712.md
inventories/: clusters.example.yaml  environments.example.yaml
mcp_server/: __init__.py  capabilities.py  cli.py  cluster.py  collectors.py  commands.py  config.py  context.py  formatters.py  models.py  must_gather.py  reports.py  sanitizers.py  schemas.py  server.py  validators.py
prompts/: README.md  analise-incidente.md  analise-must-gather.md  comparacao-ambientes.md  continuar-validacao-mcp.md  diagnostico-alertas.md  diagnostico-api.md  diagnostico-dns.md  (+20 more)
(+119 files in other folders)
