[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openshift-aiops-toolkit"
version = "0.1.0"
description = "Toolkit somente leitura para diagnóstico, evidências, relatórios e MCP em Red Hat OpenShift."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "OpenShift AIOps Toolkit contributors"}]
dependencies = ["PyYAML>=6.0", "mcp>=1.0.0"]
keywords = ["openshift", "kubernetes", "mcp", "sre", "aiops", "diagnostics"]

[project.scripts]
oc-aiops = "mcp_server.commands:main"
openshift-aiops-mcp = "mcp_server.server:main"

[tool.setuptools]
packages = ["mcp_server", "mcp_server.tools"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
